# arxivAnalyser

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  analysis.ipynb  cli.py  default.yaml  downloader.py  pyproject.toml
configs/: default.yaml
data/: progress.json
data/txt/1706.03762/: 00_Abstract.txt  01_Introduction.txt  02_Background.txt  03_Model_Architecture.txt  04_Why_Self-Attention.txt  05_Training.txt  06_Results.txt  07_Conclusion.txt  08_Attention_Visualizations.txt  09_Two_Feed-Forward_Layers_Attention_over_Parameters.txt
experiments/qwen_curated/: README.md  build_curated_manifest.py  curated_manifest_gpt2.csv  qwen25_05b_curated_metrics.csv  run_binoculars.py  run_gpt2_curated.py  run_perplexity.py
experiments/qwen_curated/configs/: 2025.yaml
src/: downloader.py  latex_parser.py  metadata.py  models.py  pipeline.py  section_classifier.py  tex_to_txt.py
tests/: test_section_classifier.py  test_tex_to_txt.py
