[project]
name = "arxiv-section-extractor"
version = "0.1.0"
description = "Large-scale extraction of structured sections from ArXiv CS papers (2022-2025)"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "TexSoup>=0.3.1",
    "pylatexenc>=2.10",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.0",
    "boto3>=1.34.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
pdf = [
    "PyMuPDF>=1.23.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "PyMuPDF>=1.23.0",
]

[project.scripts]
arxiv-extract = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
