[project]
name = "arxiv-section-extractor"
version = "0.1.0"
description = "Large-scale extraction of Related Works sections from ArXiv CS papers (2022-2025)"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "pylatexenc>=2.10",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.0",
    "anthropic>=0.39.0",
    "pyproject-toml>=0.1.0",
]

[project.optional-dependencies]
analysis = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "nltk>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "PyMuPDF>=1.23.0",
]

[project.scripts]
arxiv-extract = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
